--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8081
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/moviebooking
+spring.datasource.url=jdbc:mysql://moviebooking-instance-1.cn1oldzmnuur.ap-south-1.rds.amazonaws.com/moviebooking
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.main.allow-circular-references=true
 #spring.jpa.show-sql: true
