--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.main.allow-circular-references=true
 #spring.jpa.show-sql: true
 
+#logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=TRACE
+
+#logging.level.org.zalando.logbook=TRACE
+#logbook.filter.enabled=true
+#logbook.secure-filter.enabled=true
+
+spring.kafka.producer.bootstrap-servers=localhost:29091
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
